--- a/public/edit.html
+++ b/public/edit.html
@@ -64,13 +64,13 @@
   <p class="mt-3" id="loadingText">جاري التحميل...⏳</p>
 </div>
 
+<!-- المحتوى الرئيسي -->
 <div id="pageContent">
-  <!-- أزرار علوية -->
+  <!-- أزرار التحكم العلوية -->
   <div class="d-flex justify-content-between mb-3 mt-3">
     <div>
       <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
       <button id="dashboardBtn" class="btn btn-secondary me-2" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
-      <!-- زر تحديث الفيديوهات -->
       <button id="refreshBtn" class="btn btn-info" data-bs-toggle="tooltip" title="تحديث القائمة"><i class="bi bi-arrow-clockwise"></i></button>
     </div>
     <div>
@@ -78,6 +78,7 @@
     </div>
   </div>
 
+  <!-- محتوى الصفحة -->
   <div class="container text-center">
     <h3 class="mb-4">إدارة وتعديل الفيديوهات</h3>
     <select id="departmentSelect" class="form-select mb-3" style="max-width: 300px; margin: auto;" data-bs-toggle="tooltip" title="اختر القسم">
@@ -88,7 +89,7 @@
   </div>
 </div>
 
-<!-- نافذة عرض الوصف -->
+<!-- النوافذ المنبثقة (مودالات) -->
 <div class="modal fade" id="descModal" tabindex="-1">
   <div class="modal-dialog modal-lg"><div class="modal-content">
     <div class="modal-header"><h5 class="modal-title" id="descTitle"></h5>
@@ -98,7 +99,6 @@
   </div></div>
 </div>
 
-<!-- نافذة تعديل الفيديو -->
 <div class="modal fade" id="editModal" tabindex="-1">
   <div class="modal-dialog modal-lg"><div class="modal-content">
     <div class="modal-header"><h5 class="modal-title">تعديل الفيديو</h5>
@@ -124,7 +124,6 @@
   </div></div>
 </div>
 
-<!-- نافذة تأكيد الحذف -->
 <div class="modal fade" id="confirmDeleteModal" tabindex="-1">
   <div class="modal-dialog"><div class="modal-content">
     <div class="modal-header bg-danger text-white"><h5 class="modal-title">تأكيد الحذف</h5>
@@ -140,13 +139,15 @@
   </div></div>
 </div>
 
-<!-- Toast -->
+<!-- Toast للإشعارات -->
 <div class="toast-container" id="toastContainer"></div>
 <div id="loginModalContainer"></div>
 
+<!-- مكتبات -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="login-guard.js"></script>
+
 <script>
 let videos = [];
 let departments = [];
@@ -155,7 +156,7 @@ let quill = new Quill('#editor', {
   modules: { toolbar: [['bold','italic','underline'],[{ 'list':'ordered'},{ 'list':'bullet'}],['link','image'],[{ 'direction':'rtl'}],['clean']] }
 });
 
-// ✅ دوال Overlay
+// ✅ التحكم بالـ Overlay
 function showOverlay(text="جاري التحميل...⏳"){
   const overlay = document.getElementById("loadingOverlay");
   document.getElementById("loadingText").textContent = text;
@@ -167,7 +168,7 @@ function hideOverlay(){
   document.getElementById("loadingText").textContent = "جاري التحميل...⏳";
 }
 
-// ✅ Toast
+// ✅ نظام الإشعارات
 function showToast(message, type="success") {
   let icon = type==="success" ? "✅" : type==="danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
@@ -203,10 +204,10 @@ document.getElementById("themeToggle").addEventListener("click",()=>{
   }
 });
 
-// ✅ Dashboard
+// ✅ الذهاب للوحة التحكم
 document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
 
-// ✅ Refresh
+// ✅ زر التحديث
 document.getElementById("refreshBtn").addEventListener("click", () => {
   showOverlay("جاري تحديث القائمة...⏳");
   fetchVideos().then(() => {
@@ -219,12 +220,6 @@ document.getElementById("refreshBtn").addEventListener("click", () => {
 document.addEventListener("DOMContentLoaded", () => {
   const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
   tooltipTriggerList.forEach(el => { new bootstrap.Tooltip(el,{ trigger:'hover focus', placement:'top', delay:{show:300,hide:150}, customClass:'custom-tooltip'}); });
-});
-
-// ✅ تحميل الصفحة
-window.addEventListener("load",()=>{
-  hideOverlay();
-  document.getElementById("pageContent").style.display="block";
 });
 
 // 🔽 وظائف الفيديوهات
