--- a/public/edit.html
+++ b/public/edit.html
@@ -64,6 +64,7 @@
   <p class="mt-3" id="loadingText">جاري التحميل...⏳</p>
 </div>
 
+<!-- محتوى الصفحة (يظهر فقط بعد تسجيل الدخول الصحيح) -->
 <div id="pageContent">
   <!-- أزرار علوية -->
   <div class="d-flex justify-content-between mb-3 mt-3">
@@ -78,6 +79,7 @@
     </div>
   </div>
 
+  <!-- محتوى إدارة الفيديوهات -->
   <div class="container text-center">
     <h3 class="mb-4">إدارة وتعديل الفيديوهات</h3>
     <select id="departmentSelect" class="form-select mb-3" style="max-width: 300px; margin: auto;" data-bs-toggle="tooltip" title="اختر القسم">
@@ -140,14 +142,18 @@
   </div></div>
 </div>
 
-<!-- Toast -->
+<!-- Toast + login modal container -->
 <div class="toast-container" id="toastContainer"></div>
 <div id="loginModalContainer"></div>
 
+<!-- مكتبات -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<!-- استدعاء ملف الحماية login-guard.js -->
 <script src="login-guard.js"></script>
+
 <script>
+// ✅ تعريف المتغيرات العامة
 let videos = [];
 let departments = [];
 let quill = new Quill('#editor', {
@@ -155,7 +161,7 @@ let quill = new Quill('#editor', {
   modules: { toolbar: [['bold','italic','underline'],[{ 'list':'ordered'},{ 'list':'bullet'}],['link','image'],[{ 'direction':'rtl'}],['clean']] }
 });
 
-// ✅ دوال Overlay
+// ✅ دوال Overlay (التحميل / التحديث)
 function showOverlay(text="جاري التحميل...⏳"){
   const overlay = document.getElementById("loadingOverlay");
   document.getElementById("loadingText").textContent = text;
@@ -167,7 +173,7 @@ function hideOverlay(){
   document.getElementById("loadingText").textContent = "جاري التحميل...⏳";
 }
 
-// ✅ Toast
+// ✅ Toast (إشعارات صغيرة)
 function showToast(message, type="success") {
   let icon = type==="success" ? "✅" : type==="danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
@@ -221,13 +227,7 @@ document.addEventListener("DOMContentLoaded", () => {
   tooltipTriggerList.forEach(el => { new bootstrap.Tooltip(el,{ trigger:'hover focus', placement:'top', delay:{show:300,hide:150}, customClass:'custom-tooltip'}); });
 });
 
-// ✅ تحميل الصفحة
-window.addEventListener("load",()=>{
-  hideOverlay();
-  document.getElementById("pageContent").style.display="block";
-});
-
-// 🔽 وظائف الفيديوهات
+// 🔽 وظائف الفيديوهات (جلب، عرض، تعديل، حذف)
 async function fetchDepartments(){ try{const res=await fetch("/api/departments");departments=await res.json();}catch(e){console.error(e);} }
 function populateDeptSelect(select,selected=""){select.innerHTML='<option value="">-- اختر القسم --</option>';departments.forEach(dep=>{const o=document.createElement('option');o.value=dep.name;o.textContent=dep.name;if(dep.name===selected)o.selected=true;select.appendChild(o);});}
 async function fetchVideos(){const res=await fetch("/api/videos");videos=await res.json();populateDepartmentOptions();renderVideos();}
@@ -241,11 +241,16 @@ async function saveEdit(){const id=document.getElementById('editId').value;const
 function showDeleteModal(id){document.getElementById('deleteVideoId').value=id;new bootstrap.Modal(document.getElementById('confirmDeleteModal')).show();}
 async function confirmDelete(){const id=document.getElementById('deleteVideoId').value;showOverlay("جاري الحذف...⏳");try{await fetch(`/api/videos/${id}`,{method:'DELETE'});showToast('🗑️ تم حذف الفيديو',"danger");fetchVideos();bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal')).hide();}catch{showToast('❌ فشل الحذف',"danger");}finally{hideOverlay();}}
 
+// ✅ التحكم في البحث
 document.getElementById('departmentSelect').addEventListener('change',()=>{document.getElementById('searchInput').disabled=false;renderVideos();});
 document.getElementById('searchInput').addEventListener('input',renderVideos);
 
-// بدء تحميل الفيديوهات
-fetchVideos();
+// ✅ بدء تحميل الفيديوهات بعد تسجيل الدخول الناجح
+// (login-guard.js سيكشف sessionStorage ثم يظهر الصفحة)
+// هنا فقط نحمل البيانات
+document.addEventListener("DOMContentLoaded", () => {
+  fetchVideos();
+});
 </script>
 </body>
 </html>
