--- a/public/login-modal.html
+++ b/public/login-modal.html
@@ -2,13 +2,28 @@
 <div class="modal fade" id="passwordModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">🔐 الدخول إلى لوحة التحكم</h5>
+
+      <!-- رأس المودال -->
+      <div class="modal-header bg-primary text-white">
+        <h5 class="modal-title">🔒 صفحة محمية - تسجيل الدخول</h5>
         <!-- ❌ تمت إزالة زر الإغلاق -->
       </div>
-      <div class="modal-body">
+
+      <!-- جسم المودال -->
+      <div class="modal-body text-center">
+        <!-- أيقونة قفل كبيرة -->
+        <div class="mb-3">
+          <i class="bi bi-shield-lock-fill" style="font-size:3rem; color:#0d6efd;"></i>
+        </div>
+        <!-- رسالة توضيحية -->
+        <p class="fw-bold text-muted mb-3">
+          هذه الصفحة محمية، الرجاء إدخال كلمة المرور للمتابعة
+        </p>
+        <!-- حقل كلمة المرور -->
         <input type="password" id="dashboardPassword" class="form-control" placeholder="أدخل كلمة المرور" lang="en" autofocus>
       </div>
+
+      <!-- أزرار المودال -->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" id="cancelBtn">إلغاء</button>
         <button type="button" class="btn btn-primary" id="confirmDashboardAccess">دخول</button>
