--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -38,13 +38,13 @@
       margin-bottom: 12px;
     }
     /* ألوان الأيقونات */
-    .dashboard-card:nth-child(1) .card-icon { color: #0d6efd; } /* أزرق */
-    .dashboard-card:nth-child(2) .card-icon { color: #ffc107; } /* أصفر */
-    .dashboard-card:nth-child(3) .card-icon { color: #dc3545; } /* أحمر */
-    .dashboard-card:nth-child(4) .card-icon { color: #20c997; } /* أخضر فيروزي */
-    .dashboard-card:nth-child(5) .card-icon { color: #6f42c1; } /* بنفسجي */
-    .dashboard-card:nth-child(6) .card-icon { color: #fd7e14; } /* برتقالي */
-    .dashboard-card:nth-child(7) .card-icon { color: #198754; } /* أخضر */
+    .dashboard-card:nth-child(1) .card-icon { color: #0d6efd; }
+    .dashboard-card:nth-child(2) .card-icon { color: #ffc107; }
+    .dashboard-card:nth-child(3) .card-icon { color: #dc3545; }
+    .dashboard-card:nth-child(4) .card-icon { color: #20c997; }
+    .dashboard-card:nth-child(5) .card-icon { color: #6f42c1; }
+    .dashboard-card:nth-child(6) .card-icon { color: #fd7e14; }
+    .dashboard-card:nth-child(7) .card-icon { color: #198754; }
 
     /* Toast */
     .toast-container {
@@ -71,11 +71,18 @@
 </head>
 <body>
 
-<div class="d-flex justify-content-between align-items-center mb-3">
-  <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
-  <button id="themeToggle" class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="تبديل الوضع">
-    <i class="bi bi-moon-stars-fill"></i>
-  </button>
+<!-- ✅ أزرار علوية -->
+<div class="d-flex justify-content-between mb-3">
+  <div>
+    <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج">
+      <i class="bi bi-box-arrow-right"></i>
+    </button>
+  </div>
+  <div>
+    <button id="themeToggle" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="الوضع الليلي/النهاري">
+      <i class="bi bi-moon-stars-fill"></i>
+    </button>
+  </div>
 </div>
 
 <div class="container">
@@ -126,52 +133,68 @@
   </div>
 </div>
 
-<!-- ✅ Toast Container -->
+<!-- ✅ Toast -->
 <div class="toast-container" id="toastContainer"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="login-guard.js"></script>
 <script>
-// 🟢 دالة عرض Toast مع أيقونة
+const API_BASE = "https://video-dashboard-backend.onrender.com";
+
+// ✅ Toast
 function showToast(message, type="success") {
   let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
-  toast.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
-  toast.setAttribute('role', 'alert');
+  toast.className = `toast align-items-center text-bg-${type} border-0 mb-2 show`;
   toast.innerHTML = `
     <div class="d-flex">
       <div class="toast-body">${icon} ${message}</div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
     </div>`;
   document.getElementById('toastContainer').appendChild(toast);
-  new bootstrap.Toast(toast, { delay: 2000 }).show();
+  setTimeout(()=>toast.remove(),3000);
 }
 
-// 🟠 تسجيل الخروج مع Toast
-document.getElementById("logoutBtn").addEventListener("click", () => {
-  sessionStorage.removeItem("loggedInAt_dashboard");
-  showToast("تم تسجيل الخروج بنجاح", "success");
-  setTimeout(() => window.location.href = "index.html", 1500);
+// ✅ تسجيل خروج صارم
+document.getElementById("logoutBtn").addEventListener("click", async () => {
+  try {
+    await fetch(\`\${API_BASE}/api/logout\`, { method: "POST" }); // مسح الجلسة من السيرفر
+  } catch(e) {}
+  sessionStorage.clear(); // مسح كل شيء محلي
+  showToast("✅ تم تسجيل الخروج بنجاح","success");
+  setTimeout(()=>{ window.location.href = "index.html"; },1200);
 });
 
-// 🌙 تبديل الوضع الليلي
-const themeToggle = document.getElementById('themeToggle');
-themeToggle.addEventListener('click', () => {
-  document.body.classList.toggle('dark-mode');
-  const icon = themeToggle.querySelector("i");
-  if (document.body.classList.contains("dark-mode")) {
-    icon.classList.replace("bi-moon-stars-fill", "bi-brightness-high-fill");
-    showToast("تم تفعيل الوضع الليلي", "info");
-  } else {
-    icon.classList.replace("bi-brightness-high-fill", "bi-moon-stars-fill");
-    showToast("تم تفعيل الوضع النهاري", "info");
+// ✅ منع الرجوع للخلف بعد تسجيل الخروج
+window.history.pushState(null,null,window.location.href);
+window.addEventListener("popstate", function() {
+  if (!sessionStorage.getItem("loggedInAt_dashboard")) {
+    // تحميل login-modal.html بدل الرجوع
+    fetch("login-modal.html")
+      .then(res=>res.text())
+      .then(html=>{
+        const div=document.createElement("div");
+        div.innerHTML=html;
+        document.body.appendChild(div);
+        new bootstrap.Modal(document.getElementById("passwordModal"),{backdrop:'static',keyboard:false}).show();
+      });
   }
 });
 
-// 📝 تفعيل Tooltips
-var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-tooltipTriggerList.map(el => new bootstrap.Tooltip(el));
-</script>
+// ✅ الوضع الليلي
+const themeToggle = document.getElementById("themeToggle");
+themeToggle.addEventListener("click",()=>{
+  document.body.classList.toggle("dark-mode");
+  const icon = themeToggle.querySelector("i");
+  if(document.body.classList.contains("dark-mode")) icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");
+  else icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");
+});
 
+// ✅ Tooltips
+document.addEventListener("DOMContentLoaded",()=>{
+  const tooltipTriggerList=[].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  tooltipTriggerList.forEach(el=>{new bootstrap.Tooltip(el);});
+});
+</script>
 </body>
 </html>
