--- a/public/login-modal.html
+++ b/public/login-modal.html
@@ -101,9 +101,9 @@ document.addEventListener("DOMContentLoaded", function () {
     if (e.key === "Enter") verifyPassword();
   });
 
-  // ✅ عند الضغط على زر إلغاء → العودة للرئيسية
+/*  // ✅ عند الضغط على زر إلغاء → العودة للرئيسية
   cancelBtn.addEventListener("click", function () {
     window.location.href = "index.html";
-  });
+  }); */
 });
 </script>
