--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -33,15 +34,20 @@
       display: block;
       margin-top: 10px;
     }
-    .card-icon { font-size: 2.8rem; margin-bottom: 12px; }
-    .dashboard-card:nth-child(1) .card-icon { color: #0d6efd; }
-    .dashboard-card:nth-child(2) .card-icon { color: #ffc107; }
-    .dashboard-card:nth-child(3) .card-icon { color: #dc3545; }
-    .dashboard-card:nth-child(4) .card-icon { color: #20c997; }
-    .dashboard-card:nth-child(5) .card-icon { color: #6f42c1; }
-    .dashboard-card:nth-child(6) .card-icon { color: #fd7e14; }
-    .dashboard-card:nth-child(7) .card-icon { color: #198754; }
+    .card-icon {
+      font-size: 2.8rem;
+      margin-bottom: 12px;
+    }
+    /* ألوان الأيقونات */
+    .dashboard-card:nth-child(1) .card-icon { color: #0d6efd; } /* أزرق */
+    .dashboard-card:nth-child(2) .card-icon { color: #ffc107; } /* أصفر */
+    .dashboard-card:nth-child(3) .card-icon { color: #dc3545; } /* أحمر */
+    .dashboard-card:nth-child(4) .card-icon { color: #20c997; } /* أخضر فيروزي */
+    .dashboard-card:nth-child(5) .card-icon { color: #6f42c1; } /* بنفسجي */
+    .dashboard-card:nth-child(6) .card-icon { color: #fd7e14; } /* برتقالي */
+    .dashboard-card:nth-child(7) .card-icon { color: #198754; } /* أخضر */
 
+    /* Toast */
     .toast-container {
       position: fixed;
       top: 20px;
@@ -50,9 +56,18 @@
       z-index: 9999;
     }
 
-    body.dark-mode { background: #121212 !important; color: #eaeaea !important; }
-    body.dark-mode .dashboard-card { background: #1e1e1e; color: #eee; }
-    body.dark-mode .dashboard-card a { color: #9bbcff; }
+    /* الوضع الليلي */
+    body.dark-mode {
+      background: #121212 !important;
+      color: #eaeaea !important;
+    }
+    body.dark-mode .dashboard-card {
+      background: #1e1e1e;
+      color: #eee;
+    }
+    body.dark-mode .dashboard-card a {
+      color: #9bbcff;
+    }
   </style>
 </head>
 <body>
@@ -112,13 +127,13 @@
   </div>
 </div>
 
+<!-- ✅ Toast Container -->
 <div class="toast-container" id="toastContainer"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="login-guard.js"></script>
 <script>
-const API_BASE = "https://video-dashboard-backend.onrender.com";
-
-// 🟢 Toast Utility
+// 🟢 دالة عرض Toast مع أيقونة
 function showToast(message, type="success") {
   let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
@@ -133,31 +148,11 @@ function showToast(message, type="success") {
   new bootstrap.Toast(toast, { delay: 2000 }).show();
 }
 
-// 🛡️ تحقق من الجلسة عند تحميل الصفحة
-async function checkDashboardSession() {
-  try {
-    const res = await fetch(`${API_BASE}/api/check-session/dashboard`, { credentials: "include" });
-    const data = await res.json();
-    if (!data.authenticated) {
-      sessionStorage.removeItem("loggedInAt_dashboard");
-      window.location.href = "index.html";
-    }
-  } catch (err) {
-    console.error("فشل التحقق من الجلسة:", err);
-    window.location.href = "index.html";
-  }
-}
-
-// 🔴 تسجيل الخروج
-document.getElementById("logoutBtn").addEventListener("click", async () => {
-  try {
-    await fetch(`${API_BASE}/api/logout/dashboard`, { method: "POST", credentials: "include" });
-    sessionStorage.removeItem("loggedInAt_dashboard");
-    showToast("تم تسجيل الخروج بنجاح", "success");
-    setTimeout(() => window.location.href = "index.html", 1200);
-  } catch (err) {
-    showToast("❌ حدث خطأ أثناء تسجيل الخروج", "danger");
-  }
+// 🟠 تسجيل الخروج مع Toast
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  sessionStorage.removeItem("loggedInAt_dashboard");
+  showToast("تم تسجيل الخروج بنجاح", "success");
+  setTimeout(() => window.location.href = "index.html", 1500);
 });
 
 // 🌙 تبديل الوضع الليلي
@@ -174,11 +169,9 @@ themeToggle.addEventListener('click', () => {
   }
 });
 
-// 📝 Tooltips
-[...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el => new bootstrap.Tooltip(el));
-
-// 🚀 عند تحميل الصفحة
-document.addEventListener("DOMContentLoaded", checkDashboardSession);
+// 📝 تفعيل Tooltips
+var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+tooltipTriggerList.map(el => new bootstrap.Tooltip(el));
 </script>
 
 </body>
